# erp

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  secret.key
.agent/skills/tanstack-start/: SKILL.md
app/backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  create_db.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial_core_tables.py  20260228_0054_cc0d2c6e2dfb_add_finance_module.py  20260228_0151_a02c5e71ac93_add_invoice_module.py
app/backend/app/: __init__.py  main.py
app/backend/app/api/: __init__.py  deps.py
app/backend/app/api/v1/: __init__.py  auth.py  users.py
app/backend/app/core/: __init__.py  config.py  constants.py  database.py  events.py  exceptions.py  redis.py  security.py
app/backend/app/finance/: __init__.py  handlers.py  models.py  router.py  schemas.py  seed.py  services.py
app/backend/app/invoices/: __init__.py  models.py  pdf.py  router.py  schemas.py  services.py
app/backend/app/invoices/templates/: invoice.html
app/backend/app/models/: __init__.py  audit_log.py  base.py  role.py  tenant.py  user.py
app/backend/app/schemas/: __init__.py  base.py  role.py  tenant.py  user.py
app/backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_performance.py  test_security.py
app/backend/tests/finance/: test_finance.py
app/backend/tests/invoices/: test_services.py
app/frontend/: .cta.json  .env.example  README.md  biome.json  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
app/frontend/coverage/: clover.xml  coverage-final.json  index.html
app/frontend/coverage/src/: env.ts.html  index.html  routeTree.gen.ts.html  router.tsx.html
app/frontend/public/: manifest.json
app/frontend/src/: env.ts  routeTree.gen.ts  router.tsx  styles.css
app/frontend/src/components/: Header.tsx  LocaleSwitcher.tsx  accordion-base.stories.tsx  alert-base.stories.tsx  alert-dialog-base.stories.tsx  aspect-ratio-base.stories.tsx  avatar-base.stories.tsx  badge-base.stories.tsx  breadcrumb-base.stories.tsx  button-base.stories.tsx  calendar-base.stories.tsx  card-base.stories.tsx  carousel-base.stories.tsx  chart-base.stories.tsx  checkbox-base.stories.tsx  collapsible-base.stories.tsx  command-base.stories.tsx  component-example.tsx  context-menu-base.stories.tsx  dialog-base.stories.tsx  drawer-base.stories.tsx  dropdown-menu-base.stories.tsx  hover-card-base.stories.tsx  input-base.stories.tsx  input-otp-base.stories.tsx  label-base.stories.tsx  menubar-base.stories.tsx  navigation-menu-base.stories.tsx  pagination-base.stories.tsx  popover-base.stories.tsx  progress-base.stories.tsx  radio-group-base.stories.tsx  resizable-base.stories.tsx  scroll-area-base.stories.tsx  select-base.stories.tsx  separator-base.stories.tsx  sheet-base.stories.tsx  sidebar-base.stories.tsx  skeleton-base.stories.tsx  slider-base.stories.tsx  (+8 more)
app/frontend/src/lib/: color-mode.ts  logger.ts
app/frontend/src/store/: auth.ts  (+9 more)
docker/seaweedfs/: s3.config.json
docs/: AI-First-ERP-Strategy.md  ERPNext-Feature-Comparison.md  Tech-Stack-Decision.md  architecture.md  authentication.md  contributing.md  database-schema.md  events.md  frontend-architecture.md  multi-tenancy.md
openspec/: project.md
openspec/changes/add-programmatic-workflow-builder/: design.md  proposal.md  tasks.md
openspec/changes/establish-core-architecture/: proposal.md  tasks.md
openspec/changes/setup-frontend-architecture/: proposal.md  tasks.md
openspec/specs/finance-module/: spec.md
openspec/specs/frontend-api-client/: spec.md
openspec/specs/frontend-app-structure/: spec.md
openspec/specs/frontend-auth-ui/: spec.md
openspec/specs/frontend-design-system/: spec.md
openspec/specs/frontend-state-management/: spec.md
openspec/specs/invoice-module/: spec.md
openspec/specs/multi-tenant-foundation/: spec.md
scripts/: generate-keys.sh
(+185 files in other folders)
